--- a/backend/StripeTestTask/templates/includes/header.html
+++ b/backend/StripeTestTask/templates/includes/header.html
@@ -26,7 +26,7 @@
         </li>
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link text-primary" href="accounts/logout"
+            <a class="nav-link text-primary"
             >{{ user.username }}</a
               >
             </li>
