--- a/backend/StripeTestTask/templates/base.html
+++ b/backend/StripeTestTask/templates/base.html
@@ -30,4 +30,6 @@
   <body>
     {% include 'includes/header.html' %} {% block content %} {% endblock %}
   </body>
+  {% block scripts %}
+  {% endblock scripts %}
 </html>
